main-overflow was fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -177,6 +177,7 @@ button {
   flex-direction: column;
   gap: 10px;
   padding: 10px;
+  overflow: auto;
 }
 
 // Messages
